add: employee registration and dashboard